--- a/style.css
+++ b/style.css
@@ -155,8 +155,8 @@ nav {
 
 /* The text UL list items */
 .genre-box1 , .genre-box2 , .genre-box3 , .genre-box4 , .genre-box5 , .genre-box6 , .genre-box7 , .genre-box8 , .genre-box9  {
-  color: rgb(247, 191, 233);
-  text-shadow: 1px 1px 2px black;
+  color: rgb(0, 0, 0);
+  text-shadow: 1px 1px 2px rgb(245, 210, 248);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -169,37 +169,6 @@ nav {
   font-weight: bold;
   text-align: center;
 }
-
-.genre-box1 {
-  background-image: url("Sources/horror1-transformed.jpeg");
-}
-
-.genre-box2 {
-  background-image: url(Sources/thriller-transformed.jpeg);
-}
-
-.genre-box3 {
-  background-image: url(Sources/romance.jpg);
-}
-.genre-box4 {
-  background-image: url(Sources/drama.jpg);
-}
-.genre-box5 {
-  background-image: url(Sources/crime.jpg);
-}
-.genre-box6 {
-  background-image: url(Sources/scifi.jpg);
-}
-.genre-box7 {
-  background-image: url(Sources/comedy.jpg);
-}
-.genre-box8 {
-  background-image: url(Sources/history.jpg);
-}
-.genre-box9 {
-  background-image: url(Sources/poetic.jpg);
-}
-
 
 
 
