--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav {
   outline: none; /* Remove outline */
 }
 
-.box1, .box2, .box3, .resbox1, .resbox2, .resbox3 {
+.box1 , .box2 , .box3 , .box4 , .box5 , .resbox1, .resbox2, .resbox3 , .resbox4, .resbox5, .resbox6 , .resbox7, .resbox8, .resbox9 , .resbox10 {
   display: flex;
   align-items: center;
   box-shadow: 0px 0px 10px 1px rgb(163, 163, 163);
@@ -121,6 +121,8 @@ nav {
   background-color: #f9f9f9;
 }
 
+
+
 /* SARAS KLOKHETER */
 /* The parent box containg the items */
 .box-content1 {
@@ -129,6 +131,16 @@ nav {
   justify-content: flex-start;
   width: 100%;
   height: auto;
+}
+
+.resbox-content1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.kontaktli {
+  display: flex;
+  flex-direction: column;
 }
 
 .box1-content-text {
@@ -170,10 +182,15 @@ nav {
   text-align: center;
 }
 
+.resbox-image {
+  width: 100px; /* Adjust as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-right: 15px; /* Space between image and text */
+}
 
 
 /* SARAS KLOKHETER */
-.box-image, .resbox1, .resbox2, .resbox3 {
+.box-image {
   width: 100px; /* Adjust as needed */
   height: auto; /* Maintain aspect ratio */
   margin-right: 15px; /* Space between image and text */
@@ -310,6 +327,12 @@ footer {
 
 img {
   padding-right: 15px;
+}
+
+.nummer {
+  font-size: 40px;
+  margin-top: 15px; /* Space between image and text */
+  margin-left: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
