--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
 }
 
@@ -313,6 +313,12 @@ nav {
     font-weight: bold;
     text-align: center;
   }
+
+  .ebox1 , .ebox2 , .ebox3 , .ebox4 , .ebox5 , .ebox {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 10px 1px rgb(163, 163, 163);
+  }
 }
 footer {
   margin-right: 30px;
@@ -332,7 +338,59 @@ img {
 .nummer {
   font-size: 40px;
   margin-top: 15px; /* Space between image and text */
-  margin-left: 30px;
+  margin-left: 15px;
+  padding-right: 15px;
 }
+
+.ebox1 , .ebox2 , .ebox3 , .ebox4 , .ebox5 , .ebox6 {
+  display: flex;
+  flex-direction:column;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 1px rgb(163, 163, 163);
+  background-color: #f9f9f9;
+  margin: 45px 100px 45px 100px;
+  
+
+}
+
+.kbox1 , .kbox2 , .kbox3 {
+  display: flex;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  margin: 45px;
+  
+
+}
+
+.nummere , .evenemang-text , .recenstion-head {
+  text-align: center;
+  font-size: 40px;
+  padding: 50px;
+}
+
+.h2e {
+ 
+     text-align: center;
+      font-size: 35px;
+      margin-top: 0px;
+      
+  }
+
+ .pe {
+  text-align: center;
+  font-size: 19px;
+  margin-top: 0px;
+  }
+
+  .box-content1 {
+    padding-right: 15px;
+  }
+
 
 /*# sourceMappingURL=style.css.map */
