--- a/P-rmarPoesi/archive/updatestyle.css
+++ b/P-rmarPoesi/archive/updatestyle.css
@@ -23,6 +23,10 @@ body .logo {
   /* height: auto; Maintain aspect ratio */
 }
 
+main {
+  justify-content: center;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -44,7 +48,7 @@ nav {
 }
 
 .nav-list li {
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .nav-list a {
@@ -62,9 +66,8 @@ nav {
   right: 0;
   background-color: rgb(255, 255, 255);
   z-index: 1; /* Ensure it covers other content */
-  flex-direction: row; /* Stack links vertically */
-  padding: 15px 0; /* Add some vertical padding */
-  font-size: x-large;
+  flex-direction: column; /* Stack links vertically */
+  padding: 5px 0; /* Add some vertical padding */
 }
 
 .nav-list-mobile li {
@@ -90,67 +93,73 @@ nav {
   padding: 20px;
 }
 
+.hamburger1 {
+  background: none;
+  border: none;
+  font-size: 40px;
+  cursor: pointer;
+  padding: 15px;
+  margin-top: -30px;
+}
+
+.menu-toggle {
+  opacity: 0;
+}
+
 @media (max-width: 768px) {
   .nav-list {
     display: none; /* Hide links by default on mobile */
     flex-direction: column;
   }
-  .nav-list-mobile {
-    display: flex; /* Show mobile links when toggled */
-  }
   .hamburger {
     display: block; /* Show hamburger menu */
   }
-  .menu-toggle:checked + .hamburger + .nav-list-mobile {
-    display: flex; /* Show links when the menu is toggled */
+}
+@media (max-width: 768px) {
+  .small-boxes {
+    flex-direction: column; /* Stack small boxes vertically */
+    margin: 0 15px; /* Add horizontal margin for equal spacing */
   }
-  /* Optional: Add some styling to the mobile links */
-  .nav-list-mobile li {
-    text-align: center; /* Center align mobile links */
-    margin: 0; /* Remove margin */
+  .small-box1,
+  .small-box2 {
+    width: calc(100% - 30px); /* Ensure boxes are slightly narrower */
+    margin: 0 auto 15px auto; /* Center the box and add bottom margin */
   }
 }
-.menu-toggle {
-  opacity: 0;
-}
-
 footer {
-  margin: 10px;
+  margin-right: 30px;
+  margin-left: 45px;
+  margin-top: -15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
-}
-footer img {
-  padding-right: 15px;
-}
-footer .footer-links {
-  display: flex;
-  flex-direction: row;
-  font-family: Arial, sans-serif;
+  background-color: rgba(224, 224, 224, 0.5490196078);
 }
 
-.maintext {
+img {
+  padding-right: 15px;
+}
+
+.main-text {
   margin: 15px 0px 80px 15px;
 }
-.maintext .welcome-text {
-  font-size: xx-large;
-  padding: 30px 0px 2px 30px;
+.main-text .welcome-text {
+  font-size: x-larger;
 }
-.maintext .quote {
+.main-text .quote {
   font-style: italic;
   color: #555;
   border-left: 4px solid #ffffff;
   padding-left: 10px;
   margin: 2px;
   font-size: 1em;
+  user-select: none; /* Prevent text selection */
   outline: none; /* Remove outline */
-  padding: 1px 0px 2px 30px;
 }
 
 .linkhtml3 {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: black;
   text-align: center;
 }
 
@@ -186,24 +195,13 @@ footer .footer-links {
   font-family: Arial, sans-serif;
 }
 
-.box-content2, .box-content4, .box-content5 {
-  font-size: xx-large;
-  padding-left: 15px;
-}
-
-.box-content2 p, .box-content4 p, .box-content5 p {
-  padding-top: 5px;
-  padding-left: 5px;
-  font-size: medium;
-}
-
-.box1-content-text, .box4-content-text, .box5-content-text {
+.box1-content-text {
   margin-left: 5px;
   font-size: xx-large;
   text-align: center;
 }
 
-.box1-p, .box4-p, .box5-p {
+.box1-p {
   font-size: small;
   margin-top: 2px;
   margin-left: 5px;
@@ -224,51 +222,74 @@ footer .footer-links {
   flex-direction: row;
   font-family: Arial, sans-serif;
   justify-content: center;
-  width: 50vw;
   background-image: linear-gradient(to right, rgba(240, 112, 112, 0.726), rgba(255, 148, 246, 0.808));
-  box-shadow: inset rgba(219, 121, 121, 0.24) 0px 0px 5px 2px;
+  box-shadow: inset rgba(224, 224, 224, 0.5490196078) 0px 0px 5px 2px;
   list-style-type: none;
-  margin: 25px;
+  margin: 10px;
   padding: 30px 20px;
   border-radius: 5px;
-  width: 250px;
-  font-size: larger;
+  width: 120px;
+  font-size: large;
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
-.genre-box:hover {
-  background-color: rgb(0, 0, 0);
-  color: white;
-  transform: scale(1.2, 1.2);
+.box3 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+}
+.box3 .news-box {
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, sans-serif;
+  justify-content: center;
+}
+.box3 .news-header {
+  font-size: x-large;
+  padding: 10px;
+  margin-bottom: 10px;
+  color: black;
+}
+.box3 .emoji {
+  font-size: xx-large;
+}
+.box3 .news-p {
+  text-align: center;
 }
 
-.box5-content, .box4-content, .box3-content {
+.small-boxes {
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, sans-serif;
+  padding-bottom: 50px;
+}
+
+.small-box1,
+.small-box2 {
   display: flex;
   flex-direction: column;
   font-family: Arial, sans-serif;
   justify-content: center;
   justify-content: space-around;
   text-align: center;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 30px;
+  margin-left: 30px;
   align-items: center;
   border: 1px solid #ccc;
   box-shadow: 0px 0px 10px 2px grey;
-  padding: 10px;
+  padding: 15px;
   width: calc(50% - 10px); /* Set width to half and account for spacing */
   border-radius: 5px;
   background-color: #f9f9f9;
 }
-
-.box4 img, .box5 img {
-  width: 120px;
-}
-
-.emoji {
-  font-size: 100px;
-  color: red;
-  vertical-align: middle;
+.small-box1 .small-box-image,
+.small-box2 .small-box-image {
+  width: 150px; /* Adjust as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-right: 0; /* Space between image and text */
+  padding-bottom: 5px;
 }
 
 main {
@@ -332,91 +353,18 @@ main article img {
   width: 120px;
 }
 
-.rec-welcome {
-  display: flex;
-  flex-direction: column;
-  margin: 45px 100px 30px 50px;
-  font-size: xx-large;
-  text-align: start;
-}
-
-.nummer {
-  font-size: x-large;
-  padding-right: 15px;
-}
-
-.title-res {
-  font-size: x-large;
-  padding-left: 15px;
-}
-
-.p-res {
-  padding-top: 5px;
-  padding-left: 15px;
-}
-
-.welcome-event {
-  display: flex;
-  flex-direction: column;
-  margin: 45px 100px 30px 100px;
-  font-size: xx-large;
-  text-align: start;
-}
-.welcome-event .main-text {
-  margin: 15px 0px 20px 15px;
-}
-
 .ebox1, .ebox2, .ebox3, .ebox4, .ebox5, .ebox6 {
   display: flex;
   flex-direction: column;
   border: 1px solid #ccc;
   padding: 15px;
+  margin-bottom: 15px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px rgb(163, 163, 163);
   background-color: #f9f9f9;
-  margin: 0px 100px 45px 100px;
-}
-.ebox1 .event-date, .ebox2 .event-date, .ebox3 .event-date, .ebox4 .event-date, .ebox5 .event-date, .ebox6 .event-date {
-  font-size: x-large;
-}
-.ebox1 .event-title, .ebox2 .event-title, .ebox3 .event-title, .ebox4 .event-title, .ebox5 .event-title, .ebox6 .event-title {
-  font-size: larger;
+  margin: 45px 100px 45px 100px;
 }
 
-.kontaktli {
-  padding: 20px;
-}
-.kontaktli .h1-contact {
-  font-weight: 700;
-}
+/* Responsive Styles for Small Boxes */
 
-.kontaktaoss {
-  font-size: x-large;
-  font-weight: bolder;
-}
-
-.boxes {
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, sans-serif;
-}
-.boxes .kingbox {
-  display: flex;
-  flex-direction: row;
-  font-family: Arial, sans-serif;
-  justify-content: space-around;
-  height: 30vh;
-}
-.boxes .kingnummer {
-  font-size: larger;
-  font-weight: bold;
-}
-.boxes .king-img {
-  width: 100px;
-}
-.boxes .kingcontent1 {
-  width: 250px;
-  font-size: 500;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=updatestyle.css.map */
